--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 /[Bb]uilds/
 /Assets/AssetStoreTools*
 
+$PROJDIR/Library/
+$PROJDIR/Temp/
+
 # Visual Studio 2015 cache directory
 /.vs/
 
@@ -32,3 +35,4 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+*.exe
