--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /[Bb]uilds/
 /Assets/AssetStoreTools*
 
-$PROJDIR/Library/
+C:/Users/cool-/Documents/Git/UIGame/UIGame/Library/
 $PROJDIR/Temp/
 
 # Visual Studio 2015 cache directory
