--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 
 C:/Users/cool-/Documents/Git/UIGame/UIGame/Library/
 $PROJDIR/Temp/
+C:/Users/cool-/Documents/Git/UIGame/UIGame/Temp/
 
 # Visual Studio 2015 cache directory
 /.vs/
